# zed-vscript

./: .gitignore  Cargo.toml  LICENSE  README.md  build-grammar.sh  extension.toml  extension.wasm  package-lock.json  package.json  tasks.json
.github/workflows/: ci.yml
grammars/: vscript.wasm
grammars/vscript/: .estlintrc.js  .gitignore  grammar.js  package-lock.json  package.json  prettierrc.js  tree-sitter.json
grammars/vscript/queries/: highlights.scm  locals.scm
grammars/vscript/src/: grammar.json
grammars/vscript_backup/: Cargo.toml  binding.gyp  package-lock.json  tree-sitter-vscript.wasm  tree-sitter.json  v.mod
grammars/vscript_backup/bindings/node/: binding.cc  index.js
grammars/vscript_backup/bindings/rust/: lib.rs
grammars/vscript_backup/queries/: locals.scm
grammars/vscript_backup/src/: grammar.json  node-types.json  parser.c
languages/v/: config.toml  highlights.scm
languages/vscript/: brackets.scm  config.toml  folds.scm  highlights.scm  indents.scm  outline.scm  runnables.scm  textobjects.scm
src/: error.rs  lib.rs  vscript.rs
